<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".addAlumnoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="INFORMACION ALUMNO"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNombreAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtApellidosAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spCiclosAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/sp_ciclos" />

    <RadioGroup
        android:id="@+id/rgGrupoAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbGrupoAAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_a" />

        <RadioButton
            android:id="@+id/rbGrupoBAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_b" />

        <RadioButton
            android:id="@+id/rbGrupoCAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_c" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelarAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/btnCrearAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:text="@string/crear"
            app:cornerRadius="4dp" />
    </LinearLayout>

</LinearLayout>